[package]
name = "royalguard"
version = "0.2.1"
edition = "2021"
authors = ["Zahash <zahash.z@gmail.com>"]
description = "Royal Guard!"
license = "MIT"
repository = "https://github.com/zahash/royalguard"


[dependencies]
anyhow = { version = "1" }
regex = { version = "1" }
lazy_static = { version = "1" }
clap = { version = "4", features = ["derive"] }
rpassword = { version = "7" }
rustyline = { version = "12" }
uuid = { version = "1", features = ["v4", "serde"] }
aes-gcm = { version = "0.10" }
ring = { version = "0.17" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
dirs = { version = "5" }

[dev-dependencies]
pretty_assertions = { version = "1" }
