[package]
name = "royalguard"
version = "0.3.2"
edition = "2021"
authors = ["Zahash <zahash.z@gmail.com>"]
description = "Ergonomic Command Line Password Manager. Forever Free."
license = "MIT"
repository = "https://github.com/zahash/royalguard"


[dependencies]
anyhow = { version = "1" }
regex = { version = "1" }
lazy_static = { version = "1" }
clap = { version = "4", features = ["derive"] }
rpassword = { version = "7" }
rustyline = { version = "12" }
uuid = { version = "1", features = ["v4", "serde"] }
aes-gcm = { version = "0.10" }
ring = { version = "0.17" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
dirs = { version = "5" }
clipboard = { version = "0.5" }

[dev-dependencies]
pretty_assertions = { version = "1" }
tempfile = { version = "3" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
