[package]
name = "royalguard"
version = "0.4.1"
edition = "2021"
authors = ["Zahash <zahash.z@gmail.com>"]
description = "Ergonomic Command Line Password Manager. Forever Free."
license = "MIT"
repository = "https://github.com/zahash/royalguard"


[dependencies]
anyhow = "1"
regex = "1"
lazy_static = "1"
clap = { version = "4", features = ["derive"] }
rpassword = "7"
rustyline = "12"
uuid = { version = "1", features = ["v4", "serde"] }
aes-gcm = "0.10"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
arboard = "3.2"
chrono = { version = "0.4", features = ["serde"] }
ignorant = { version = "0.1" }

[dev-dependencies]
pretty_assertions = { version = "1" }
# tempfile = { version = "3" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
